--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     </noscript>
 
-    <title>Professional Architect | Innovative Design Solutions</title>
+    <title>Senior Software Engineer</title>
     
     <!-- Primary Meta Tags -->
     <meta name="title" content="Professional Architect | Innovative Design Solutions">
