--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://singhpragya.netlify.app//">
+  <meta property="og:url" content="https://bymayanksingh.com/">
   <meta property="og:title" content="Professional Software Engineer | Innovative Design Solutions">
   <meta property="og:description" content="Explore a portfolio of innovative sofware projects & designs.">
   <meta property="og:image" content="/og-image.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://singhpragya.netlify.app//">
+  <meta property="twitter:url" content="https://bymayanksingh.com/">
   <meta property="twitter:title" content="Professional Software Engineer | Innovative Design Solutions">
   <meta property="twitter:description" content="Explore a portfolio of innovative sofware projects & designs.">
   <meta property="twitter:image" content="/og-image.jpg">
@@ -58,7 +58,7 @@
   <link rel="mask-icon" href="/masked-icon.svg" color="#000000">
 
   <!-- Additional SEO -->
-  <link rel="canonical" href="https://singhpragya.netlify.app//">
+  <link rel="canonical" href="https://bymayanksingh.com/">
 </head>
 
 <body>
